--- a/event/platform/plug.html
+++ b/event/platform/plug.html
@@ -80,30 +80,30 @@
 
 
   <!-- JS Global Compulsory -->
-  <script src="../../assets/vendor/jquery/jquery.min.js"></script>
-  <script src="../../assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
-  <script src="../../assets/vendor/popper.js/popper.min.js"></script>
-  <script src="../../assets/vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="/event/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="/event/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
+  <script src="/event/assets/vendor/popper.js/popper.min.js"></script>
+  <script src="/event/assets/vendor/bootstrap/bootstrap.min.js"></script>
 
 
   <!-- JS Implementing Plugins -->
-  <script src="../../assets/vendor/appear.js"></script>
-  <script src="../../assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-  <script src="../../assets/vendor/circles/circles.min.js"></script>
-  <script src="../../assets/vendor/malihu-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+  <script src="/event/assets/vendor/appear.js"></script>
+  <script src="/event/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+  <script src="/event/assets/vendor/circles/circles.min.js"></script>
+  <script src="/event/assets/vendor/malihu-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
 
   <!-- JS Unify -->
-  <script src="../../assets/js/hs.core.js"></script>
-  <script src="../../assets/js/helpers/hs.hamburgers.js"></script>
-  <script src="../../assets/js/components/hs.header.js"></script>
-  <script src="../../assets/js/components/hs.tabs.js"></script>
-  <script src="../../assets/js/components/hs.progress-bar.js"></script>
-  <script src="../../assets/js/components/hs.scrollbar.js"></script>
-  <script src="../../assets/js/components/hs.chart-pie.js"></script>
-  <script src="../../assets/js/components/hs.go-to.js"></script>
+  <script src="/event/assets/js/hs.core.js"></script>
+  <script src="/event/assets/js/helpers/hs.hamburgers.js"></script>
+  <script src="/event/assets/js/components/hs.header.js"></script>
+  <script src="/event/assets/js/components/hs.tabs.js"></script>
+  <script src="/event/assets/js/components/hs.progress-bar.js"></script>
+  <script src="/event/assets/js/components/hs.scrollbar.js"></script>
+  <script src="/event/assets/js/components/hs.chart-pie.js"></script>
+  <script src="/event/assets/js/components/hs.go-to.js"></script>
 
   <!-- JS Customization -->
-  <script src="../../assets/js/custom.js"></script>
+  <script src="/event/assets/js/custom.js"></script>
 
   <!-- JS Plugins Init. -->
   <script>
