--- a/event/platform/room.html
+++ b/event/platform/room.html
@@ -48,7 +48,7 @@
           <nav class="js-mega-menu navbar navbar-expand-lg hs-menu-initialized hs-menu-horizontal">
               <div class="container d-flex align-items-center">
                   <!-- Logo -->
-                  <a href="../../index.html" class="navbar-brand d-flex g-width-150 g-width-auto--sm">
+                  <a href="/event/index.html" class="navbar-brand d-flex g-width-150 g-width-auto--sm">
                       <img src="./logo_1.png">
                   </a>
                   <!-- End Logo -->
@@ -68,13 +68,13 @@
                       <ul class="navbar-nav text-uppercase g-pos-rel g-font-weight-600 ml-auto">
                           <!-- Intro -->
                           <li class="nav-item  g-mx-10--lg g-mx-15--xl">
-                            <a href="../../index.html" class="nav-link g-py-7 g-color-white g-font-size-15 g-font-weight-700 g-px-0">Трансляция</a>
+                            <a href="/event/index.html" class="nav-link g-py-7 g-color-white g-font-size-15 g-font-weight-700 g-px-0">Трансляция</a>
                         </li>
                         <li class="nav-item  g-mx-10--lg g-mx-15--xl">
-                            <a href="../../index.html" class="nav-link g-py-7 g-color-white g-font-size-15 g-font-weight-700 g-px-0">Ваши фотографии</a>
+                            <a href="/event/index.html" class="nav-link g-py-7 g-color-white g-font-size-15 g-font-weight-700 g-px-0">Ваши фотографии</a>
                         </li>
                         <li class="nav-item  g-mx-10--lg g-mx-15--xl">
-                            <a href="../../index.html" class="nav-link g-py-7 g-color-white g-font-size-15 g-font-weight-700 g-px-0">Контакты</a>
+                            <a href="/event/index.html" class="nav-link g-py-7 g-color-white g-font-size-15 g-font-weight-700 g-px-0">Контакты</a>
                         </li>
                           <!-- End Intro -->
 
@@ -210,30 +210,30 @@
 
 
   <!-- JS Global Compulsory -->
-  <script src="../../assets/vendor/jquery/jquery.min.js"></script>
-  <script src="../../assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
-  <script src="../../assets/vendor/popper.js/popper.min.js"></script>
-  <script src="../../assets/vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="/event/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="/event/assets/vendor/jquery-migrate/jquery-migrate.min.js"></script>
+  <script src="/event/assets/vendor/popper.js/popper.min.js"></script>
+  <script src="/event/assets/vendor/bootstrap/bootstrap.min.js"></script>
 
 
   <!-- JS Implementing Plugins -->
-  <script src="../../assets/vendor/appear.js"></script>
-  <script src="../../assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-  <script src="../../assets/vendor/circles/circles.min.js"></script>
-  <script src="../../assets/vendor/malihu-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+  <script src="/event/assets/vendor/appear.js"></script>
+  <script src="/event/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+  <script src="/event/assets/vendor/circles/circles.min.js"></script>
+  <script src="/event/assets/vendor/malihu-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
 
   <!-- JS Unify -->
-  <script src="../../assets/js/hs.core.js"></script>
-  <script src="../../assets/js/helpers/hs.hamburgers.js"></script>
-  <script src="../../assets/js/components/hs.header.js"></script>
-  <script src="../../assets/js/components/hs.tabs.js"></script>
-  <script src="../../assets/js/components/hs.progress-bar.js"></script>
-  <script src="../../assets/js/components/hs.scrollbar.js"></script>
-  <script src="../../assets/js/components/hs.chart-pie.js"></script>
-  <script src="../../assets/js/components/hs.go-to.js"></script>
+  <script src="/event/assets/js/hs.core.js"></script>
+  <script src="/event/assets/js/helpers/hs.hamburgers.js"></script>
+  <script src="/event/assets/js/components/hs.header.js"></script>
+  <script src="/event/assets/js/components/hs.tabs.js"></script>
+  <script src="/event/assets/js/components/hs.progress-bar.js"></script>
+  <script src="/event/assets/js/components/hs.scrollbar.js"></script>
+  <script src="/event/assets/js/components/hs.chart-pie.js"></script>
+  <script src="/event/assets/js/components/hs.go-to.js"></script>
 
   <!-- JS Customization -->
-  <script src="../../assets/js/custom.js"></script>
+  <script src="/event/assets/js/custom.js"></script>
 
   <!-- JS Plugins Init. -->
   <script>
