--- a/electro/index.html
+++ b/electro/index.html
@@ -122,27 +122,27 @@
             <div class="container">
                 <h2 class="section__title">Наши услуги</h2>
                 <div class="services__wrap">
-                    <article class="services__item service-item">
+                    <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="0">
                         <img src="./img/svg/molniya.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Молниезащита зданий и сооружений</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
-                    <article class="services__item service-item">
+                    <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="350">
                         <img src="./img/svg/montazh.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Электромонтажные работы</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
-                    <article class="services__item service-item">
+                    <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">
                         <img src="./img/svg/zazemlenie.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Заземление, контур заземления</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
-                    <article class="services__item service-item">
+                    <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="350">
                         <img src="./img/svg/kontur.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Измерение сопротивления контура заземления</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
-                    <article class="services__item service-item">
+                    <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">
                         <img src="./img/svg/proekt.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Проектные роботы (электроснабжение, связь)</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
@@ -283,17 +283,17 @@
         <section class="benefits">
             <div class="container">
                 <div class="benefits__wrap">
-                    <article class="benefits-item">
+                    <article class="benefits-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="0">
                         <img src="./img/svg/benefit-1.svg" alt="Иконка преимущества" class="benefits-item__img">
                         <h3 class="benefits-item__title">Качество и надежность</h3>
                         <p class="benefits-item__text">Качественное выполнение работ является гарантией безопасности и надежной работы в течение всего срока эксплуатации.</p>
                     </article>
-                    <article class="benefits-item">
+                    <article class="benefits-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="350">
                         <img src="./img/svg/benefit-2.svg" alt="Иконка преимущества" class="benefits-item__img">
                         <h3 class="benefits-item__title">Своевременность</h3>
                         <p class="benefits-item__text">Относимся к времени как самому ценному не возобновляемому ресурсу. Мы отчетливо понимаем важность обязательств по срокам.</p>
                     </article>
-                    <article class="benefits-item">
+                    <article class="benefits-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">
                         <img src="./img/svg/benefit-3.svg" alt="Иконка преимущества" class="benefits-item__img">
                         <h3 class="benefits-item__title">Ответственность и гарантии</h3>
                         <p class="benefits-item__text">Единая ответственность за весь комплекс выполненных работ, материалы и оборудование. Гарантии подкреплены договором страхования.</p>
@@ -396,17 +396,17 @@
             <div class="container">
                 <h2 class="section__title">Полезные статьи</h2>
                 <div class="articles__wrap">
-                    <article class="article-item">
+                    <article class="article-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="0">
                         <h3 class="article-item__title">Зачем нужно делать проект систем электроснабжения?</h3>
                         <p class="article-item__text">Проектирование систем электроснабжения - это этап, без которого невозможно реализовать работу по созданию проекта здания. </p>
                         <a href="#" class="button button_white article-item__link">подробнее</a>
                     </article>
-                    <article class="article-item">
+                    <article class="article-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="350">
                         <h3 class="article-item__title">Зачем нужно делать проект систем электроснабжения?</h3>
                         <p class="article-item__text">Проектирование систем электроснабжения - это этап, без которого невозможно реализовать работу по созданию проекта здания. </p>
                         <a href="#" class="button button_white article-item__link">подробнее</a>
                     </article>
-                    <article class="article-item">
+                    <article class="article-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">
                         <h3 class="article-item__title">Зачем нужно делать проект систем электроснабжения?</h3>
                         <p class="article-item__text">Проектирование систем электроснабжения - это этап, без которого невозможно реализовать работу по созданию проекта здания. </p>
                         <a href="#" class="button button_white article-item__link">подробнее</a>
@@ -535,6 +535,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/aos.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
 </body>
 </html>
