--- a/electro/index.html
+++ b/electro/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="header__wrap">
                 <a href="./index.html" class="logo">
-                    <img src="./img/logo.svg" alt="Логотип" class="logo__img">
+                    <img loading="lazy" src="./img/logo.svg" alt="Логотип" class="logo__img">
                 </a>
                 <button class="button button_orange button_no-hover services-btn js-services-btn">
                     <span class="services-btn__icon">
@@ -54,7 +54,7 @@
                     </ul>
                 </nav>
                 <div class="contacts-dropdown">
-                    <img src="./img/phone-icon.png" alt="Иконка телефона" class="contacts-dropdown__icon">
+                    <img loading="lazy" src="./img/phone-icon.png" alt="Иконка телефона" class="contacts-dropdown__icon">
                     <div class="contacts-dropdown__body">
                         <a href="tel:+3800675060118" class="contacts-dropdown__tel">(067) 506-01-18</a>
                         <span class="contacts-dropdown__subtext">связаться с нами</span>
@@ -104,7 +104,7 @@
         <section class="hero">
             <picture>
                 <source srcset="./img/hero-bg.webp" type="image/webp">
-                <img class="hero__bg" src="./img/hero-bg.jpg" alt="Фон первого экрана">
+                <img loading="lazy" class="hero__bg" src="./img/hero-bg.jpg" alt="Фон первого экрана">
             </picture>
             <div class="container">
                 <div class="hero__content">
@@ -112,8 +112,8 @@
                     <h1 class="hero__title">Защитим от прямого удара молнии!</h1>
                     <p class="hero__subtitle">Полный комплекс работ «под ключ» начиная с обследования и заканчивая подготовкой исполнительской документации.</p>
                     <div class="hero__buttons">
-                        <button class="button button_orange hero__button js-toggle-popup" data-target-popup="js-popup-request"><img src="./img/icon-lightning-sm.png" alt="Иконка"> Оставить заявку</button>
-                        <a href="#calculator" class="button button_blue hero__button js-scroll-link"><img src="./img/icon-house-sm.png" alt="Иконка"> Рассчет стоимости</a>
+                        <button class="button button_orange hero__button js-toggle-popup" data-target-popup="js-popup-request"><img loading="lazy" src="./img/icon-lightning-sm.png" alt="Иконка"> Оставить заявку</button>
+                        <a href="#calculator" class="button button_blue hero__button js-scroll-link"><img loading="lazy" src="./img/icon-house-sm.png" alt="Иконка"> Рассчет стоимости</a>
                     </div>
                 </div>
             </div>
@@ -123,27 +123,27 @@
                 <h2 class="section__title">Наши услуги</h2>
                 <div class="services__wrap">
                     <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="0">
-                        <img src="./img/svg/molniya.svg" alt="Иконка" class="service-item__icon">
+                        <img loading="lazy" src="./img/svg/molniya.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Молниезащита зданий и сооружений</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
                     <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="350">
-                        <img src="./img/svg/montazh.svg" alt="Иконка" class="service-item__icon">
+                        <img loading="lazy" src="./img/svg/montazh.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Электромонтажные работы</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
                     <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">
-                        <img src="./img/svg/zazemlenie.svg" alt="Иконка" class="service-item__icon">
+                        <img loading="lazy" src="./img/svg/zazemlenie.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Заземление, контур заземления</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
                     <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="350">
-                        <img src="./img/svg/kontur.svg" alt="Иконка" class="service-item__icon">
+                        <img loading="lazy" src="./img/svg/kontur.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Измерение сопротивления контура заземления</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
                     <article class="services__item service-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">
-                        <img src="./img/svg/proekt.svg" alt="Иконка" class="service-item__icon">
+                        <img loading="lazy" src="./img/svg/proekt.svg" alt="Иконка" class="service-item__icon">
                         <h3 class="service-item__name">Проектные роботы (электроснабжение, связь)</h3>
                         <a href="./service.html" class="button button_white service-item__link">Подробнее</a>
                     </article>
@@ -156,7 +156,7 @@
                     <div class="calculator__content">
                         <picture class="calculator__content-bg">
                             <source srcset="./img/calculator-bg.webp" type="image/webp">
-                            <img src="./img/calculator-bg.jpg" alt="Фон">
+                            <img loading="lazy" src="./img/calculator-bg.jpg" alt="Фон">
                         </picture>
                         <div class="calculator__container">
                             <h2 class="calculator__title">Онлайн калькулятор</h2>
@@ -166,10 +166,10 @@
                                 <a href="tel:+3800675060118" class="calculator__tel">(067) 506-01-18</a>
                                 <div class="calculator__socials">
                                     <a href="#" class="calculator__social-item">
-                                        <img src="./img/svg/telegram.svg" alt="Иконка">
+                                        <img loading="lazy" src="./img/svg/telegram.svg" alt="Иконка">
                                     </a>
                                     <a href="#" class="calculator__social-item">
-                                        <img src="./img/svg/viber.svg" alt="Иконка">
+                                        <img loading="lazy" src="./img/svg/viber.svg" alt="Иконка">
                                     </a>
                                 </div>
                             </div>
@@ -181,7 +181,7 @@
                                 <h3 class="calc__title">Выберите тип дома:</h3>
                                 <div class="calc__types">
                                     <label class="calc__type-item active">
-                                        <img src="./img/svg/dom-1.svg" alt="Плоская крыша" class="calc__type-img">
+                                        <img loading="lazy" src="./img/svg/dom-1.svg" alt="Плоская крыша" class="calc__type-img">
                                         <div class="calc__type-choose">
                                             <input type="radio" name="house_type" value="1" class="calc__type-input js-house-type-input" checked>
                                             <span class="calc__type-fake"></span>
@@ -189,7 +189,7 @@
                                         </div>
                                     </label>
                                     <label class="calc__type-item">
-                                        <img src="./img/svg/dom-2.svg" alt="Двухскатная кровля" class="calc__type-img">
+                                        <img loading="lazy" src="./img/svg/dom-2.svg" alt="Двухскатная кровля" class="calc__type-img">
                                         <div class="calc__type-choose">
                                             <input type="radio" name="house_type" value="2" class="calc__type-input js-house-type-input">
                                             <span class="calc__type-fake"></span>
@@ -255,7 +255,7 @@
                             </div>
                             <div class="calc__bottom">
                                 <button class="button button_blue calc__button js-calc-btn">
-                                    <img src="./img/svg/load-icon.svg" alt="Иконка">
+                                    <img loading="lazy" src="./img/svg/load-icon.svg" alt="Иконка">
                                     Рассчитать
                                 </button>
                                 <span class="calc__price js-calc-price">0 грн</span>
@@ -284,17 +284,17 @@
             <div class="container">
                 <div class="benefits__wrap">
                     <article class="benefits-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="0">
-                        <img src="./img/svg/benefit-1.svg" alt="Иконка преимущества" class="benefits-item__img">
+                        <img loading="lazy" src="./img/svg/benefit-1.svg" alt="Иконка преимущества" class="benefits-item__img">
                         <h3 class="benefits-item__title">Качество и надежность</h3>
                         <p class="benefits-item__text">Качественное выполнение работ является гарантией безопасности и надежной работы в течение всего срока эксплуатации.</p>
                     </article>
                     <article class="benefits-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="350">
-                        <img src="./img/svg/benefit-2.svg" alt="Иконка преимущества" class="benefits-item__img">
+                        <img loading="lazy" src="./img/svg/benefit-2.svg" alt="Иконка преимущества" class="benefits-item__img">
                         <h3 class="benefits-item__title">Своевременность</h3>
                         <p class="benefits-item__text">Относимся к времени как самому ценному не возобновляемому ресурсу. Мы отчетливо понимаем важность обязательств по срокам.</p>
                     </article>
                     <article class="benefits-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">
-                        <img src="./img/svg/benefit-3.svg" alt="Иконка преимущества" class="benefits-item__img">
+                        <img loading="lazy" src="./img/svg/benefit-3.svg" alt="Иконка преимущества" class="benefits-item__img">
                         <h3 class="benefits-item__title">Ответственность и гарантии</h3>
                         <p class="benefits-item__text">Единая ответственность за весь комплекс выполненных работ, материалы и оборудование. Гарантии подкреплены договором страхования.</p>
                     </article>
@@ -304,7 +304,7 @@
         <section class="index-about">
             <picture>
                 <source srcset="./img/index-about-bg.wepb" type="image/wepb">
-                <img class="index-about__bg" src="./img/index-about-bg.jpg" alt="Фон">
+                <img loading="lazy" class="index-about__bg" src="./img/index-about-bg.jpg" alt="Фон">
             </picture>
             <div class="container">
                 <div class="index-about__body">
@@ -312,35 +312,35 @@
                     <p class="index-about__subtitle">Мы работаем по всей территории Украины, выполняем молниезащиту самых различных объектов:</p>
                     <ul class="index-about__list">
                         <li class="index-about__item">
-                            <img src="./img/svg/1-torgovie.svg" alt="Иконка в списке" class="index-about__img">
+                            <img loading="lazy" src="./img/svg/1-torgovie.svg" alt="Иконка в списке" class="index-about__img">
                             <span class="index-about__text">Торговые и офисные центры</span>
                         </li>
                         <li class="index-about__item">
-                            <img src="./img/svg/2-sanatorii.svg" alt="Иконка в списке" class="index-about__img">
+                            <img loading="lazy" src="./img/svg/2-sanatorii.svg" alt="Иконка в списке" class="index-about__img">
                             <span class="index-about__text">Санатории и рекреационные комплексы</span>
                         </li>
                         <li class="index-about__item">
-                            <img src="./img/svg/3-kotedzh.svg" alt="Иконка в списке" class="index-about__img">
+                            <img loading="lazy" src="./img/svg/3-kotedzh.svg" alt="Иконка в списке" class="index-about__img">
                             <span class="index-about__text">Коттеджи</span>
                         </li>
                         <li class="index-about__item">
-                            <img src="./img/svg/4-restorany.svg" alt="Иконка в списке" class="index-about__img">
+                            <img loading="lazy" src="./img/svg/4-restorany.svg" alt="Иконка в списке" class="index-about__img">
                             <span class="index-about__text">Ресторанные комплексы</span>
                         </li>
                         <li class="index-about__item">
-                            <img src="./img/svg/5-prom.svg" alt="Иконка в списке" class="index-about__img">
+                            <img loading="lazy" src="./img/svg/5-prom.svg" alt="Иконка в списке" class="index-about__img">
                             <span class="index-about__text">Промышленные предприятия</span>
                         </li>
                         <li class="index-about__item">
-                            <img src="./img/svg/6-mob.svg" alt="Иконка в списке" class="index-about__img">
+                            <img loading="lazy" src="./img/svg/6-mob.svg" alt="Иконка в списке" class="index-about__img">
                             <span class="index-about__text">Базовые станции мобильной связи</span>
                         </li>
                         <li class="index-about__item">
-                            <img src="./img/svg/7-azs.svg" alt="Иконка в списке" class="index-about__img">
+                            <img loading="lazy" src="./img/svg/7-azs.svg" alt="Иконка в списке" class="index-about__img">
                             <span class="index-about__text">Автозаправочные станции</span>
                         </li>
                         <li class="index-about__item">
-                            <img src="./img/svg/8-doma.svg" alt="Иконка в списке" class="index-about__img">
+                            <img loading="lazy" src="./img/svg/8-doma.svg" alt="Иконка в списке" class="index-about__img">
                             <span class="index-about__text">Многоэтажные дома</span>
                         </li>
                     </ul>
@@ -420,7 +420,7 @@
             <div class="footer__wrap">
                 <div class="footer__col">
                     <a href="./index.html" class="logo">
-                        <img src="./img/logo.svg" alt="Логотип" class="logo__img">
+                        <img loading="lazy" src="./img/logo.svg" alt="Логотип" class="logo__img">
                     </a>
                     <div class="footer__social">
                         <span class="footer__social-label">Присоединяйтесь:</span>
@@ -490,31 +490,31 @@
                     <ul class="footer__contact-list">
                         <li class="footer__contact">
                             <a href="#" class="footer__link">
-                                <img src="./img/svg/phone.svg" alt="Иконка">
+                                <img loading="lazy" src="./img/svg/phone.svg" alt="Иконка">
                                 <span>(067) 506-01-18</span>
                             </a>
                         </li>
                         <li class="footer__contact">
                             <span class="footer__text">
-                                <img src="./img/svg/adres.svg" alt="Иконка">
+                                <img loading="lazy" src="./img/svg/adres.svg" alt="Иконка">
                                 <span>с. Софиевская Борщаговка, ул. Павла Чубинского, 4А, офис 222</span>
                             </span>
                         </li>
                         <li class="footer__contact">
                             <span class="footer__text">
-                                <img src="./img/svg/adres.svg" alt="Иконка">
+                                <img loading="lazy" src="./img/svg/adres.svg" alt="Иконка">
                                 <span>Киев, ул. Межигорская 24Б офис 12 (юридический адрес)</span>
                             </span>
                         </li>
                         <li class="footer__contact">
                             <a href="#" class="footer__link">
-                                <img src="./img/svg/mail.svg" alt="Иконка">
+                                <img loading="lazy" src="./img/svg/mail.svg" alt="Иконка">
                                 <span>pbv2017@ukr.net</span>
                             </a>
                         </li>
                         <li class="footer__contact">
                             <span class="footer__text">
-                                <img src="./img/svg/grafik.svg" alt="Иконка">
+                                <img loading="lazy" src="./img/svg/grafik.svg" alt="Иконка">
                                 <span>Пн-Пт 09:00 - 18:00</span>
                             </span>
                         </li>
@@ -557,7 +557,7 @@
     <div class="popup js-popup-thx js-popup-close">
         <div class="popup__body">
             <button class="button popup__close js-popup-close"></button>
-            <img src="./img/svg/popup-icon.svg" alt="Иконка" class="popup__icon">
+            <img loading="lazy" src="./img/svg/popup-icon.svg" alt="Иконка" class="popup__icon">
             <h2 class="section__title section__title_tac">Спасибо!</h2>
             <p class="popup__text">Ваша заявка принята и уже обрабатывается нашими специалистами.</p>
             <p class="popup__text popup__text_big">Оставайтесь на связи.</p>
@@ -568,7 +568,7 @@
     <div class="popup js-popup-close js-popup-err">
         <div class="popup__body">
             <button class="button popup__close js-popup-close"></button>
-            <img src="./img/svg/popup-icon.svg" alt="Иконка" class="popup__icon">
+            <img loading="lazy" src="./img/svg/popup-icon.svg" alt="Иконка" class="popup__icon">
             <h2 class="section__title section__title_tac">Извините!</h2>
             <p class="popup__text">У нас произошла техническая ошибка</p>
             <p class="popup__text popup__text_big">Попробуйте немного позже.</p>
