index-electro done

--- a/electro/index.html
+++ b/electro/index.html
@@ -100,6 +100,91 @@
             </div>
         </div>
     </header>
+    <div class="menu js-menu">
+        <div class="menu__col menu__col_services">
+            <h2 class="section__title section__title_orange">Услуги</h2>
+            <ul class="footer__list">
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Молниезащита</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Электромонтажные работы</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Заземление</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Измерение сопротивления контура заземления</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Проектные роботы</a>
+                </li>
+            </ul>
+            <div class="language js-language">
+                <select class="language__select" name="language">
+                    <option value="none" hidden>RU</option>
+                    <option value="RU">RU</option>
+                    <option value="UA">UA</option>
+                    <option value="EN">EN</option>
+                </select>
+            </div>
+        </div>
+        <div class="menu__col menu__col_info">
+            <h2 class="section__title section__title_orange">Информация</h2>
+            <ul class="footer__list">
+                <li class="footer__item">
+                    <a href="#" class="footer__link">О компании</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Расчет стоимости</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Наши работы</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Статьи</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <div class="menu__col menu__col_contacts">
+            <h2 class="section__title section__title_orange">Контакты</h2>
+            <ul class="footer__list footer__contact-list">
+                <li class="footer__contact">
+                    <a href="#" class="footer__link">
+                        <img loading="lazy" src="./img/svg/phone.svg" alt="Иконка">
+                        <span>(067) 506-01-18</span>
+                    </a>
+                </li>
+                <li class="footer__contact">
+                    <span class="footer__text">
+                        <img loading="lazy" src="./img/svg/adres.svg" alt="Иконка">
+                        <span>с. Софиевская Борщаговка, ул. Павла Чубинского, 4А, офис 222</span>
+                    </span>
+                </li>
+                <li class="footer__contact">
+                    <span class="footer__text">
+                        <img loading="lazy" src="./img/svg/adres.svg" alt="Иконка">
+                        <span>Киев, ул. Межигорская 24Б офис 12 (юридический адрес)</span>
+                    </span>
+                </li>
+                <li class="footer__contact">
+                    <a href="#" class="footer__link">
+                        <img loading="lazy" src="./img/svg/mail.svg" alt="Иконка">
+                        <span>pbv2017@ukr.net</span>
+                    </a>
+                </li>
+                <li class="footer__contact">
+                    <span class="footer__text">
+                        <img loading="lazy" src="./img/svg/grafik.svg" alt="Иконка">
+                        <span>Пн-Пт 09:00 - 18:00</span>
+                    </span>
+                </li>
+            </ul>
+        </div>
+    </div>
     <main class="main js-page-id" data-page="main">
         <section class="hero">
             <picture>
