--- a/kalashnikov/index.html
+++ b/kalashnikov/index.html
@@ -56,10 +56,10 @@
         <section class="hero">
             <div class="container">
                 <div class="hero__wrap">
-                    <div class="hero__logo">
+                    <div class="hero__logo js-parallax-item">
                         <img src="./img/logo-big.png" alt="Большое лого" class="hero__logo-img">
                     </div>
-                    <div class="hero__date">
+                    <div class="hero__date js-parallax-item">
                         <span class="hero__text hero__text_red hero__text_big">24</span>
                         <span class="hero__text hero__text_red">декабря в</span>
                         <span class="hero__text hero__text_silver hero__text_big">17:00</span>
@@ -120,6 +120,7 @@
         </div>
         <section id="translation" class="translation">
             <img class="translation__bg" src="./img/translation-bg.png" alt="Фон">
+            <img class="translation__micro js-parallax-item" src="./img/micro.png" alt="Микрофон">
             <div class="container">
                 <div class="big-title">
                     <img class="big-title__bg" src="./img/big-title_bg.png" alt="Фон - разделитель">
