--- a/kalashnikov/login.html
+++ b/kalashnikov/login.html
@@ -52,7 +52,6 @@
         </nav>
     </div>
     <main class="main login">
-        <img class="hero__bg" src="./img/header-bg.png" alt="Фон">
         <div class="container">
             <div class="login__wrapper">
                 <form class="login__body">
@@ -61,7 +60,7 @@
                     <input type="text" name="user_name" class="form__input form__input_blue" placeholder="Имя">
                     <input type="email" name="user_email" class="form__input form__input_blue" placeholder="E-mail">
                     <input type="password" name="user_pass" class="form__input form__input_blue" placeholder="Пароль">
-                    <button type="submit" class="button form__button"><span>Отправить</span></button>
+                    <button type="submit" class="button form__button"><span>Вход на сайт</span></button>
                 </form>
             </div>
         </div>
